--- a/RepeatCommand/RepeatCommand.csproj
+++ b/RepeatCommand/RepeatCommand.csproj
@@ -50,14 +50,17 @@
   <ItemGroup>
     <Reference Include="OTAPI">
       <HintPath>..\..\_tshock\OTAPI.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="TerrariaServer">
       <HintPath>..\..\_tshock\TerrariaServer.exe</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="TShockAPI">
       <HintPath>..\..\_tshock\ServerPlugins\TShockAPI.dll</HintPath>
+      <Private>False</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
